--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>net.bull.javamelody</groupId>
 	<artifactId>jira-confluence-javamelody</artifactId>
-	<version>1.68.0-SNAPSHOT</version>
+	<version>1.68.0</version>
 	<packaging>jar</packaging>
 
 	<name>JIRA Confluence Bamboo JavaMelody Plugin</name>
