--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
-			<version>${project.version}</version>
+			<version>1.71.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.lowagie</groupId>
