--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>net.bull.javamelody</groupId>
 	<artifactId>jira-confluence-javamelody</artifactId>
-	<version>1.71.1</version>
+	<version>1.72.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>JIRA Confluence Bamboo JavaMelody Plugin</name>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
-			<version>1.71.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.lowagie</groupId>
